<resources>
    <string name="app_name">Расписание СВФУ</string>
    <string name="settings">Настройки</string>
    <string name="notes">Заметки</string>
    <string name="about">О приложении</string>
    <string name="nightdaystyle">Дневной/ночной режим</string>
    <string name="save_cache">Сохранять кэш</string>
    <string name="Notifications">Уведомления:</string>
    <string name="RemindAt">Напоминать о\nпервой паре в:</string>
    <string name="RemindTimeBefore">Напоминать до:</string>
    <string name="aboutus">Программу разработали Студенты СВФУ ФТИ АТП-21:\nСлепцов Сергей Н.\nМамонтова Анастасия Г. Афанасьева Алина Н.\nВсе права не защищены 2025 г.</string>
</resources>