<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ActionBar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/settings"
        app:titleMargin="4dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

    <View
        android:id="@+id/view2"
        style="@style/CustomViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:theme="@style/Theme.MyWeb3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Switch
            android:id="@+id/switch1"
            style="@style/SwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center|right"
            android:switchTextAppearance="@style/NormalText"
            android:text="@string/nightdaystyle"
            android:textAppearance="@style/NormalText" />

        <CheckBox
            android:id="@+id/checkBox2"
            style="@style/CheckboxStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save_cache" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/Notifications"
            android:textAlignment="center"
            android:textAppearance="@style/NormalText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/RemindAt"
                android:textAppearance="@style/NormalText" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="time"
                android:text="00:00"
                android:textAlignment="center"
                android:textAppearance="@style/NormalText"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/RemindTimeBefore"
                android:textAppearance="@style/NormalText" />

            <EditText
                android:id="@+id/editTextTime2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="time"
                android:text="00:00"
                android:textAlignment="center"
                android:textAppearance="@style/NormalText"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>